DeepLWindow: Add "Manage glossaries" for specific project glossaries

--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/DeepLWindow.xaml
@@ -213,12 +213,17 @@
 		<DockPanel LastChildFill="False"
 				   Grid.Row="4"
 				   DockPanel.Dock="Bottom"
-				   Margin="0 5 0 5">
+				   Margin="10 5 10 5">
+            <Button Style="{StaticResource Sdl.Button.SecondaryStyle}"
+                    Content="Manage glossaries"
+                    DockPanel.Dock="Left"
+					Command="{Binding ManageGlossariesCommand}"
+                    Cursor="Hand" />
 			<Button Style="{StaticResource Sdl.Button.SecondaryStyle}"
 					IsCancel="True"
 					Content="Cancel"
 					DockPanel.Dock="Right"
-					Margin="10,0,5,0"
+					Margin="5,0,0,0"
 					Cursor="Hand" />
 			<Button Style="{StaticResource Sdl.Button.PrimaryStyle}"
 					Content="OK"
