--- a/GoogleCloudTranslationProvider/View/LanguageMappingProviderView.xaml
+++ b/GoogleCloudTranslationProvider/View/LanguageMappingProviderView.xaml
@@ -100,6 +100,15 @@
 					   VerticalAlignment="Top"
 					   Margin="16 5" />
 
+			<Button Content="Missing a language code? Click here to find them"
+					Command="{Binding OpenHyperlinkCommand}"
+					CommandParameter="https://cloud.google.com/translate/docs/languages"
+					Style="{StaticResource Sdl.Button.HyperLinkStyle}"
+					Grid.Row="3"
+					VerticalAlignment="Top"
+					HorizontalAlignment="Right"
+					Margin="16 5" />
+
 			<Separator Grid.Row="4"
 					   VerticalAlignment="Top"
 					   Background="#FFBFCDD4" />
