--- a/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/BrowseGlossariesWindow.xaml
+++ b/DeepLMTProvider/Sdl.Community.DeelLMTProvider/UI/BrowseGlossariesWindow.xaml
@@ -4,6 +4,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:uiHelpers="clr-namespace:Sdl.Community.DeepLMTProvider.UI.UiHelpers"
+        xmlns:controls="clr-namespace:Sdl.Community.DeepLMTProvider.UI.Controls"
         SizeToContent="WidthAndHeight"
         MinHeight="200"
         MaxWidth="600"
@@ -12,6 +13,22 @@
         WindowStartupLocation="CenterScreen"
         Title="Add glossaries' details"
         mc:Ignorable="d">
+
+    <Window.InputBindings>
+        <KeyBinding Key="E"
+                    Modifiers="Control"
+                    CommandParameter="Edit"
+                    Command="{Binding KeyboardShortcutCommand, RelativeSource={RelativeSource AncestorType=Window}}"/>
+
+        <KeyBinding Key="Enter"
+                    CommandParameter="ImportGlossaries"
+                    Command="{Binding KeyboardShortcutCommand, RelativeSource={RelativeSource AncestorType=Window}}" />
+
+        <KeyBinding Key="Escape"
+                    CommandParameter="Escape"
+                    Command="{Binding KeyboardShortcutCommand, RelativeSource={RelativeSource AncestorType=Window}}"/>
+    </Window.InputBindings>
+
     <Window.Resources>
         <ResourceDictionary>
             <ResourceDictionary.MergedDictionaries>
@@ -19,8 +36,9 @@
                 <ResourceDictionary Source="/Sdl.Desktop.Platform.Styles;component/datagridresources.xaml" />
             </ResourceDictionary.MergedDictionaries>
             <Style TargetType="Button"
-                   BasedOn="{StaticResource Sdl.Button.GeneralStyle}" >
-                <Setter Property="Focusable" Value="False"/>
+                   BasedOn="{StaticResource Sdl.Button.GeneralStyle}">
+                <Setter Property="Focusable"
+                        Value="False" />
             </Style>
 
             <Style TargetType="ComboBox"
@@ -30,8 +48,10 @@
                 <Setter Property="HorizontalContentAlignment"
                         Value="Center" />
             </Style>
-            <Style x:Key="DataGridCell_Style" TargetType="DataGridCell"  >
-                <Setter Property="Focusable" Value="False"/>
+            <Style x:Key="DataGridCell_Style"
+                   TargetType="DataGridCell">
+                <Setter Property="Focusable"
+                        Value="False" />
             </Style>
         </ResourceDictionary>
     </Window.Resources>
@@ -55,10 +75,6 @@
                   AutoGenerateColumns="False"
                   ItemsSource="{Binding Glossaries, RelativeSource={RelativeSource AncestorType=Window}}">
 
-            <DataGrid.InputBindings>
-                <KeyBinding Key="Enter" Command="{Binding ImportGlossariesCommand, RelativeSource={RelativeSource AncestorType=Window}}"/>
-            </DataGrid.InputBindings>
-
             <DataGrid.Columns>
 
                 <DataGridTemplateColumn Header="Name"
@@ -67,7 +83,8 @@
                                         SortMemberPath="Name">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
-                            <TextBlock Text="{Binding Name}" />
+                            <controls:EditableTextBlock Text="{Binding Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
+                                                        IsEditing="{Binding IsEditing, RelativeSource={RelativeSource AncestorType=Window}}" />
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
@@ -106,6 +123,14 @@
                     Margin="0 0 5 0"
                     Focusable="False"
                     Click="BrowseButton_Click"
+                    DockPanel.Dock="Left"
+                    HorizontalAlignment="Left" />
+            
+            <Button Content="Edit"
+                    Margin="0 0 5 0"
+                    Name="EditButton"
+                    Focusable="False"
+                    Click="EditButton_OnClick"
                     DockPanel.Dock="Left"
                     HorizontalAlignment="Left" />
             <Button Content="Cancel"
